# e-hdm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/e_hdm/: __init__.py  async_client.py  client.py  enums.py  exceptions.py  models.py  transport.py  utils.py
tests/: test_client.py
