[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e-hdm"
version = "1.0.0"
description = "Python client for the Armenian electronic HDM API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" }
]
keywords = ["hdm", "crm", "armenia", "tax", "fiscal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/Sevanbbx/e-hdm"
Repository = "https://github.com/Sevanbbx/e-hdm"
Issues = "https://github.com/Sevanbbx/e-hdm/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
